--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,4 +1,4 @@
-<p>
+<p id="copyright">
   Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
