--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -262,6 +262,9 @@ div#main div#sidebar {
     color: white;
     text-decoration: none;
   }
+  @media (max-width: 800px) {
+    display:none;
+  }
 }
 
 p.meta {
